finished test case

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 API_SECRET=gocrudapi2403
 DB_HOST=127.0.0.1
+#DB_HOST=golang-crud-api-postgres 
 DB_DRIVER=postgres
 DB_USER=bay2403
 DB_PASSWORD=1q2w3e4r
@@ -9,8 +10,13 @@ DB_PORT=5432 #Default postgres port
 # Postgres Test
 TestApiSecret=gocrudapi2403
 TestDbHost=127.0.0.1
+#TestDbHost=postgres_test
 TestDbDriver=postgres
 TestDbUser=bay2403
 TestDbPassword=1q2w3e4r
 TestDbName=go_crud_api_example_test
 TestDbPort=5432
+
+# Used by pgadmin service 
+PGADMIN_DEFAULT_EMAIL=live@admin.com
+PGADMIN_DEFAULT_PASSWORD=password
