add docker-compose to run app in container, add readme

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 API_SECRET=gocrudapi2403
-DB_HOST=127.0.0.1
-#DB_HOST=golang-crud-api-postgres 
+#DB_HOST=127.0.0.1
+DB_HOST=golang-crud-api-postgres 
 DB_DRIVER=postgres
 DB_USER=bay2403
 DB_PASSWORD=1q2w3e4r
@@ -9,8 +9,8 @@ DB_PORT=5432 #Default postgres port
 
 # Postgres Test
 TestApiSecret=gocrudapi2403
-TestDbHost=127.0.0.1
-#TestDbHost=postgres_test
+#TestDbHost=127.0.0.1
+TestDbHost=postgres_test
 TestDbDriver=postgres
 TestDbUser=bay2403
 TestDbPassword=1q2w3e4r
